--- a/LineageActions/res/values/strings.xml
+++ b/LineageActions/res/values/strings.xml
@@ -1,5 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<!--
+     Copyright (C) 2013-2016 The CyanogenMod Project
+               (C) 2017 The LineageOS Project
+
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+
+          http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <!-- DO NOT TRANSLATE Empty summary for dynamic preferences -->
+    <string name="summary_empty" translatable="false"></string>
+
+    <!-- Label for feature switch [CHAR LIMIT=30] -->
+    <string name="switch_bar_on">On</string>
+
+    <!-- Label for feature switch [CHAR LIMIT=30] -->
+    <string name="switch_bar_off">Off</string>
+
+    <!-- Device specific settings -->
+    <string name="device_settings_app_name">Advanced settings</string>
+
+    <!-- Device actions -->
+    <string name="actions_title">Actions</string>
+
     <string name="screen_gestures_panel_summary" translatable="false">Special Device Gestures</string>
+
     <string name="moto_gestures_panel_title">Moto Gestures</string>
+
+    <!-- Camera gesture -->
+    <string name="camera_gesture_title">Double-twist</string>
+    <string name="camera_gesture_summary">Open camera when using the double twist gesture</string>
+
+    <!-- Chop-chop gesture -->
+    <string name="chop_chop_gesture_title">Chop-chop</string>
+    <string name="chop_chop_gesture_summary">Toggle flashlight when using the chop-chop gesture</string>
+
+    <!-- Hand wave silencer gesture -->
+    <string name="hand_wave_silencer_title">Wave to silence</string>
+    <string name="hand_wave_silencer_summary">Silence incoming calls by waving your hand across the screen</string>
+
+    <!-- Flip to mute gesture -->
+    <string name="flip_to_mute_title">Flip for Do Not Disturb</string>
+    <string name="flip_to_mute_summary">Place the phone face down to silence notifications and calls</string>
+
+    <!-- Lift to silence gesture -->
+    <string name="lift_to_silence_title">Pick up to stop ringing</string>
+    <string name="lift_to_silence_summary">Lift the phone to silence incoming calls. It only works when your phone starts flat</string>
+
+    <!-- Pick-up gesture -->
+    <string name="pick_up_gesture_title">Pick-up</string>
+    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>
+
+    <!-- Hand wave gesture -->
+    <string name="hand_wave_gesture_title">Hand wave</string>
+    <string name="hand_wave_gesture_summary">Pulse notifications on hand wave</string>
+
+    <!-- Ambient Display -->
+    <string name="ambient_display_title">Ambient display</string>
+    <string name="ambient_display_enable_title">Ambient display</string>
+    <string name="ambient_display_enable_summary">Wake screen when you receive notifications</string>
+    <string name="ambient_display_gestures_title">Ambient display gestures</string>
+    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
+    <string name="ambient_display_summary">Wake screen when you receive notifications</string>
+    <string name="ambient_display_summary_on">Screen will wake when you receive notifications</string>
+    <string name="ambient_display_summary_off">Screen will not wake when you receive notifications</string>
+    <string name="ambient_display_always_on_title">Always on</string>
+    <string name="ambient_display_always_on_summary">Show time, notification icons, and other info. Increased battery usage.</string>
 </resources>
